[package]
name = "ideal_gas_law_game"
version = "0.0.1"
authors = ["JJJimbo1"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
#   "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
#   "hdr",
  "vorbis",
#   "x11",
#   "filesystem_watcher",
] }
bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14.1" }
lazy_static = "1.4.0"
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
# winit = { version = "0.26.0", default-features = false }
# image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
