[package]
name = "ideal_gas_law_game"
version = "0.0.1"
authors = ["JJJimbo1"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 'z'
# codegen-units = 1
# strip = true


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
# lto = true
# codegen-units = 1
# strip = true

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = "0.9.0"
bevy_rapier3d = "0.19.0"
bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14.1" }
# log = "0.4.17"
# log = "0.4"
lazy_static = "1.4.0"
thousands = "0.2.0"
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
# winit = { version = "0.26.0", default-features = false }
# image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
